[metOfficeDataHub] Cleanups
[metOfficeDataHub] Cleanups

Signed-off-by: dag81 <david.goodyear@gmail.com>